fix for blurry mirrored emotes and 1px difference

--- a/assets/chat/css/generify.scss
+++ b/assets/chat/css/generify.scss
@@ -27,6 +27,14 @@
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+
+    //fix "blur" or mirrored emotes
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .generify-dank {
